@@ -1,7 +1,8 @@
 Revision history for Tesla-API
 
 0.03 UNREL
-    -
+    - Added api_clear_cache() for methods that need to daisy chain calls, but
+      require fresh data between them
 
 0.02    2022-03-18
     - Removed all vehicle related stuff and moved it into a separate subclass
